plugins {
    id 'org.springframework.boot' version '4.0.6' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'org.labcabrera.parking'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    ext {
        axonVersion = '4.13.1'
        springdocVersion = '3.0.3'

        swaggerAnnotationsVersion = '2.2.13'
        springCloudVersion = '2025.1.1'
        rsqlParserVersion = '2.1.0'
        mapstructVersion = '1.5.5.Final'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.6"
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        implementation "org.axonframework:axon-spring-boot-starter:${axonVersion}"
        implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
	    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
        implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
        implementation 'org.springframework.boot:spring-boot-starter-kafka'

        runtimeOnly 'org.postgresql:postgresql'

        compileOnly 'org.projectlombok:lombok'

        annotationProcessor 'org.projectlombok:lombok'
	    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/sources/annotations")
        options.compilerArgs += ["-Amapstruct.defaultComponentModel=spring"]
    }

    jar {
        enabled = false
        archiveClassifier = ''
    }
}
